tdf#164434 Correct SvgSymbolNode SVG import

The embedding cannot rely on SVG providing all
values of x/y/w/h, so added fallbacks to real
geometric size. Also removed double-adding
geometry.

Change-Id: I1914ed0c3e1e42ba899db4f3eb9193fd29e9c4be
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179831
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@me.com>
(cherry picked from commit 6700b311310a94e0de8123b307275cd553bb0d9b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179920
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>